--- a/PlaywriteOccupationTherapy/Client/wwwroot/index.html
+++ b/PlaywriteOccupationTherapy/Client/wwwroot/index.html
@@ -11,19 +11,29 @@
     <link href="PlaywriteOccupationTherapy.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <link rel="stylesheet" href="_content/Syncfusion.Blazor/styles/bootstrap4.css" />
+    <link href="https://cdn.syncfusion.com/blazor/18.4.42/styles/bootstrap4.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
 </head>
 
 <body>
-    <div id="app">Loading...</div>
-
+    <div id="app">
+        <div style="padding-top: 43vh;">
+            <p class="font-weight-light text-center" style="color: black"><em>Loading...</em></p>
+        </div>
+    </div>
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
-
 </html>
+<style>
+    #app {
+        min-height: 100vh;
+    }
+</style>
