--- a/PlaywriteOccupationTherapy/Client/wwwroot/index.html
+++ b/PlaywriteOccupationTherapy/Client/wwwroot/index.html
@@ -38,7 +38,7 @@
     #app {
         text-align: center;
         min-height: 100vh;
-        background: linear-gradient(0.25turn, #455b62, #455b63,#6f8b96, #ffffff);
+        background: linear-gradient(0.25turn, #586574, #586574, #8497ac, #ffffff);
         background-size: cover;
     }
 </style>
